@@ -74,25 +74,25 @@ crc32:26a1e2b8  ref/popt.xml
 crc64:9d1915b7064c6abd  ref/popt.xml
 adler32:7f94ba50  ref/popt.xml
 jlu32:1a707c45  ref/popt.xml
-md2:00992ce0eed33d9253ae27a732245c1a  ref/popt.yaml
-md4:8c667f317f2740cb0e61551f7bd108c7  ref/popt.yaml
-md5:00ce474b2d230f33cc06b8a88bfb795f  ref/popt.yaml
-sha1:4cff416cc0a5a12a03a928e46f5d160011f1c881  ref/popt.yaml
-sha224:e98aef046c218cc313da78908bc38ce319f227fbb4e94d3bda80e264  ref/popt.yaml
-sha256:cfd0308f93746dcfb03aabd3d2dd92c45836dff63fcf5a0752e2af3add7507f5  ref/popt.yaml
-sha384:2b6c9e00bc91c4d98308ef164e689fc3d7febc0ad8817070b8339fbf9f6350b1337e961978899f38914a54861d747343  ref/popt.yaml
-sha512:17a60a5209096bc1d14e5c5d2b366967b9b62f0adcec79bc9d1966aa09cb6fdb6e179f68926e9c7ac87f4f4b87727051af8d87bb61b53d0023edaa28c46bffa0  ref/popt.yaml
-salsa10:fe83a42263ad6361c319c1809eb08994bbca2a48513fc5e6ec9d1c7a6c9f0adc4911083d1b9beb263fff00f5b2d55247ee0d242399dbbf4ba5eee93508da37e1  ref/popt.yaml
-salsa20:c696f91c03a07c093f8edf30cc367d1600e0c0ec703a7af68f9b9fd2c1ce278247c5414f963e4216ee05a4fcc8b6c2cb4d674e6105162c8b09b7949d256d9e0b  ref/popt.yaml
-rmd128:d88b716dee417166deff6cc619eca5a8  ref/popt.yaml
-rmd160:445ab500fe1de6706e2f6fef692cdde9dfb3804e  ref/popt.yaml
-rmd256:c421d0a482cfd5fbf108bb3eb0f019010de90a256449aa2e8b821fbbf77ba8f0  ref/popt.yaml
-rmd320:a038666996d549b191e66166c2abbbe0aff6857f24964862436c9398450639f24f1d39473c6e3b6e  ref/popt.yaml
-tiger:8664a2400a83389c6785253c9b34207a55a2e814461492a2  ref/popt.yaml
-crc32:693bb9fe  ref/popt.yaml
-crc64:9ed9f35732a977db  ref/popt.yaml
-adler32:52d2328b  ref/popt.yaml
-jlu32:05453017  ref/popt.yaml
+md2:a0251536ed0a41c176d4e6c4516982c8  ref/popt.yaml
+md4:752910f4927ddc152352ce8d6307fc3e  ref/popt.yaml
+md5:acf09656afca51663e169634bf89a5ae  ref/popt.yaml
+sha1:7032e4d74dffcc2727f6e02b8ff362994573440d  ref/popt.yaml
+sha224:b1be16f5058d78bc7b5dd0ebfd991850de0ebf1cb5e20dcfe8f946fb  ref/popt.yaml
+sha256:1e409e44d56c062446899dd96bca95ec89456a4ea0a69a1de5c847a993fae836  ref/popt.yaml
+sha384:2137f254b386ec92f87d85d66d96dd930ec884c747390eaece48ba9ce59cd6ae4001c3465e1fb4c93459f6181799b450  ref/popt.yaml
+sha512:bd56c5a9654aa03ca0b2437e39d1297d36ac03b76a2e47387eded611d87fa0eeb5750d8eb3730bd382c462f60e6b8b10e4c5102e0f3e3bf267f21d67d9056e1c  ref/popt.yaml
+salsa10:71b47eb8721755cbd48d7010e3c16a558e8700a5ade7a2018b8818413fe7279bf578aee0f7a5ba6dddca06f990a0b69ef0f2902ea87988e170d2daaa8fd952ba  ref/popt.yaml
+salsa20:55f9e447700fad772fc4dee99559f8f33e311bf78ee0924638f20ae8df0cd27485e5bb7d633205720dea7c28e0c3cbf6b0f54c03ede1b5d2b7df9fe2216ef152  ref/popt.yaml
+rmd128:5532b89503cd335258a1b2579d94a5bf  ref/popt.yaml
+rmd160:398bbcd50c323128cf59ff2ce535130d1e990cc4  ref/popt.yaml
+rmd256:2efb770c8d45018b77cb861812f5e97b536c27356bb6d6e4c9a48b134ee2001b  ref/popt.yaml
+rmd320:25ff01aaebd9b9bad573cc8fe35f66a9270cb528e12e5fea8f133d15423daf6a523ec6e9feaff339  ref/popt.yaml
+tiger:0a5d3c3f3fa082cdf1daf2d365308109e729e8200003a7ce  ref/popt.yaml
+crc32:227612c9  ref/popt.yaml
+crc64:c315aed35aa2244f  ref/popt.yaml
+adler32:47e23958  ref/popt.yaml
+jlu32:9cac1b06  ref/popt.yaml
 md2:17f5c459013e0e1255442db2f522f53c  ref/primary.xml
 md4:0d449d9769d91c52f24fed56e866b6ea  ref/primary.xml
 md5:048c66b449d1efbbccee62a9d1c9437d  ref/primary.xml
