@@ -4,6 +4,8 @@
 	- jbj: tests: verify rpmrepo XML spewage using popt-1.14.
 	- jbj: tests: verify XML/YAML markup queries using popt-1.14.
 	- jbj: tests: download popt-1.14 packages for use in tests.
+	- jbj: yaml: fix: single element string arrays had extra "- ".
+	- jbj: yaml: remove the hotwired hack for SRPM dirnames indentation.
 	- jbj: rpmsw: add rpmswPrint to display stopwtch results.
 	- jbj: rpmdigest: s/--all/--alldigests/ w rpmio "make check".
 	- jbj: rpmio: increase no. of digests from 4 => 32 for rpmdigest --all.
